--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "animate.css": "^4.1.1",
+    "aos": "^3.0.0-beta.6",
     "bootstrap": "^5.3.1",
     "lax.js": "^2.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-wow": "^1.0.0",
     "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4",
-    "wow.js": "^1.2.2"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -45,7 +46,6 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.3.3",
-    "wowjs": "^1.1.3"
+    "tailwindcss": "^3.3.3"
   }
 }
