--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "animate.css": "^4.1.1",
     "aos": "^3.0.0-beta.6",
     "bootstrap": "^5.3.1",
-    "lax.js": "^2.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
@@ -46,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.4",
     "tailwindcss": "^3.3.3"
   }
 }
